// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly with two expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     expense
    s
     totalling 
    $23,500,000.00
  </h1>
</div>
`;
